--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="index.css">
-    <meta http-equiv="refresh" content="4;url=acesso/acesso.html">
+    <meta http-equiv="refresh" content="4;url=home/home.html">
     </head>
     <div class="loading">
         <div class="loading-text">
